Changelog
=========

4.9.dev0 - (unreleased)
-----------------------

4.8 - (2018-07-12)
------------------
* Improve: get rid of customization of eea.geotags template in order to use
  Open Street Map support recently implemented.
  Manual step: clear google maps key in site/manage_propertiesForm
  Manual step: delete customization of eea.geotags.js in portal_skins/custom.
  Manual step: create geonames.org account and use it in @@geotags-controlpanel
  [GhitaB #95147]
* Improve: Add info text in landitem view for registering account.
  [GhitaB #96128]

4.7 - (2018-06-27)
------------------
* Feature: Multiple improvements related to login, register, password reset,
  terms of use, personal settings sections. Add disclaimer_permission field
  for user memberdata used in register form and personal settings.
  Update email notifications templates.
  [GhitaB #96522]
* Improve: Landitem view/Download - Use button for login.
* Improve: Landitem view - Hide unused tabs. Metadata tab as default when no
  iframe and landfiles.
  [GhitaB #96128]

4.6 - (2018-06-15)
------------------
* Fix: Fix response headers for fonts files in order to fix IE bug for icons.
  [GhitaB #95088]

4.5 - (2018-05-31)
------------------
* Fix: Prevent error when uploaded file is empty in Admin land files.
  [GhitaB #95890]
* Fix: Prevent non-ascii error in user profile information form.
  [GhitaB #95900]

4.4 - (2018-05-22)
------------------
* Improve: homepage - show 4 news instead of 3.
  [GhitaB #95161]
* Fix: add validation in Register for domains (at least one checked).
  [GhitaB #95169]
* Fix: solve error for non-ascii chars in geotags (metadata tab of landitems).
  [GhitaB #94900]

4.3 - (2018-04-18)
------------------
* Improve: landitem view - use Download tab as default when map view is empty.
* Improve: homepage layout, add news carousel.
  [GhitaB #94690]
* Fix typo in field description.
  [GhitaB #92357]
* Fix js error in landitem view when map is missing.
  [GhitaB #93957]
